<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="40dp"
              android:background="@android:color/transparent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_exit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:clickable="true"
        android:background="@drawable/roundrec_exitbg"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/exit"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#cccccc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="exitno"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/no"
                android:textColor="@android:color/white"/>

            <ImageView
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="#cccccc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="exityes"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/yes"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>