<LinearLayout android:id="@+id/ll_outer"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#E7E7E7"
              android:orientation="vertical"
    >

    <include
        layout="@layout/head_title"></include>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/marging_8"
        android:src="@drawable/huaweilogin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.huawei.ott.LoginActivity">

        <!-- Login progress -->

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:background="@drawable/login_text_bt"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="@dimen/marging_8"
                        android:singleLine="true"
                        android:textCursorDrawable="@null"/>


                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/login_text_bt"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/marging_8"
                        android:singleLine="true"
                        android:textCursorDrawable="@null"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:id="@+id/ll_remember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="3dp">

                        <CheckBox
                            android:id="@+id/cb_remember_me"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/cb_login"
                            android:clickable="false"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/remember"
                            android:textColor="@color/color_green"/>
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_auto_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:padding="3dp">

                        <CheckBox
                            android:id="@+id/cb_auto_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/cb_login"
                            android:clickable="false"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="Auto Login"
                            android:textColor="@color/color_green"/>
                    </LinearLayout>

                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bt_login"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/color_green"
                        android:textSize="20sp"/>

                    <ProgressBar
                        android:id="@+id/login_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminateDrawable="@drawable/progressbar_sweep"
                        android:visibility="gone"
                        />
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>